# providers

./: .gitignore  Cargo.toml  DX.md  Justfile  README.md
.circleci/: config.yml
.github/workflows-disabled/: ci.yml.disabled
.kiro/steering/: dx.md
data/: provider-metadata.generated.json  providers.rkyv
src/: catalog_archive.rs  config.rs  dx_config.rs  errors.rs  lib.rs  main.rs  provider.rs  provider_metadata.rs  provider_metadata_export.rs
src/auth/: cookie_extractor.rs  mod.rs  token_store.rs
src/providers/: anthropic.rs  antigravity_web.rs  chatgpt_web.rs  claude_web.rs  cloudflare.rs  codex_web.rs  gemini_web.rs  google_gemini.rs  google_gemini_oauth.rs  mod.rs  openai_compat.rs  opencode_zen.rs  perplexity.rs  qwen_oauth.rs  replicate.rs  rkyv_loader.rs
